---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Begin conversion to per-quality chemical plants
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 26
  Info:
    - Initial commit